# project1

./: .flake8  README.md  main.py  pyproject.toml
data/: names.txt
data/src/: main.py
src/: README.md  masks.py  masks2.py  processing.py  widget.py
tasks/: task9.1.py  task9.2.py  task9.3.py  task9.4.py
tests/: test.main.py  test.processing.py
utils/: add.py  hello.py
